--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropdown Sidebar</title>
+    <title>All Spells</title>
       <style>
         /* CSS for sidebar */
         .sidebar {
